reactions: Fix text-overflow while hovering over reactions.
Currently, if reaction has been made by a user
with a long name, the text overflows while
hovering over the reaction.

We fix this by adding a span tag to the usernames
and assigning it a class 'break_all_words' and
applying 'word-break:break-all' property to
the class to prevent overflow.

--- a/web/styles/app_components.css
+++ b/web/styles/app_components.css
@@ -1007,3 +1007,7 @@ div.overlay {
         }
     }
 }
+
+.break_all_words {
+    word-break: break-all;
+}
